Correcion de recuperar contraseñas y se creo metodo para la validacion del 2FA
