# src/interfaces/routes/loginRoutes.js
@@ -1,12 +1,10 @@
 const express = require('express');
 const router = express.Router();
-const {  loginUsuario,generarSecret2FA } = require('../controllers/authController');
+const {  loginUsuario,verificarCodigo } = require('../controllers/authController');
 
 
 
 router.post('/auth/login', loginUsuario);
-
-
-
+router.post('/auth/verificar-codigo', verificarCodigo);
 
 module.exports = router;
